[tool.poetry]
name = "homefinder"
version = "0.1.0"
description = "AI-driven real estate investment evaluation"
authors = ["Attilio Polito <attiliopolito@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = ">=1.30.0"
langgraph = ">=0.0.15"
langchain = ">=0.1.0"
langchain-core = ">=0.1.0"
langchain-google-genai = ">=0.0.6"
pydantic = ">=2.0.0"
python-dotenv = ">=1.0.0"
tenacity = ">=8.2.0"
httpx = ">=0.25.0"
google-generativeai = ">=0.3.0"
langsmith = ">=0.1.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-asyncio = ">=0.23.0"
pytest-mock = ">=3.12.0"
ruff = ">=0.3.0"
mypy = ">=1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black/ruff format
    "B008",  # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.10"
explicit_package_bases = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = [
    "streamlit.*",
    "langgraph.*",
    "langchain_core.*",
    "langchain_google_genai.*",
    "google.generativeai.*",
    "tenacity.*",
    "httpx.*",
]
ignore_missing_imports = true
